--- a/src/ObservableCollections/ObservableCollections.csproj
+++ b/src/ObservableCollections/ObservableCollections.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <AssemblyName>Suzuryg.FaceEmo.Ext.ObservableCollections</AssemblyName>
+
         <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net8.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <LangVersion>12.0</LangVersion>
