chore: Replace dependencies
Create DLL from the following commit:
https://github.com/suzuryg/R3/commits/dd38d999db9418740f445e311daf12d79b52730a/

--- a/src/ObservableCollections.R3/ObservableCollections.R3.csproj
+++ b/src/ObservableCollections.R3/ObservableCollections.R3.csproj
@@ -20,7 +20,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="R3" Version="1.0.0" />
+		<Reference Include="Suzuryg.FaceEmo.Ext.R3">
+			<HintPath>Dependencies\R3\netstandard2.1\Suzuryg.FaceEmo.Ext.R3.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 
 	<ItemGroup>
