--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,14 +20,21 @@ jobs:
         uses: actions/checkout@v4
         with:
             fetch-depth: 0
+            submodules: true
 
       - name: Fetch and merge ObservableCollections version
         run: |
           git remote add upstream https://github.com/Cysharp/ObservableCollections.git
           git fetch upstream --tags
           git checkout -b ${{ inputs.tag }} $(git rev-list -n 1 tags/${{ inputs.tag }})
-          git checkout face-emo
+          git checkout add-update-workflow
           git merge ${{ inputs.tag }}
+
+      - name: Update R3 submodule
+        run: |
+          cd R3
+          git fetch origin
+          git checkout face-emo
 
       - name: Setup .NET
         uses: Cysharp/Actions/.github/actions/setup-dotnet@main
