--- a/src/ObservableCollections.R3/ObservableCollections.R3.csproj
+++ b/src/ObservableCollections.R3/ObservableCollections.R3.csproj
@@ -21,7 +21,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<Reference Include="Suzuryg.FaceEmo.Ext.R3">
-			<HintPath>Dependencies\R3\netstandard2.1\Suzuryg.FaceEmo.Ext.R3.dll</HintPath>
+			<HintPath>..\..\R3\src\R3\Build\netstandard2.1\Suzuryg.FaceEmo.Ext.R3.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 
